1.  внесены изменения по замечаниям, добавлены тесты в соответствии с ТЗ